--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -4,13 +4,17 @@
     <%# ログインしているときは以下を表示する %>
       <div class="greeting">
         <%= "こんにちは、#{current_user.name}さん" %>
-        <%= link_to "ユーザー名さん", root_path, class: :greeting__link%>
+        <%#= link_to "ユーザー名さん", root_path, class: :greeting__link%>
       </div> 
-      <% else %>
-      <% end %>
     <%# // ログインしているときは上記を表示する %>
-    <div class="card__wrapper">
+    <% else %>
+    
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
+    
+    <% end %>
+      
+    <div class="card__wrapper">
+    <%= render 'prototype', collection: @prototypes %>
     </div>
   </div>
 </main>
