編集と削除の出現条件

--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,8 +1,7 @@
 <div class="card">
-  <%= link_to root_path %>
-     <%= image_tag prototype.image, class: :card__img %>
+  <%= link_to image_tag(prototype.image, class: :card__img), prototype_path(prototype.id), method: :get %>
   <div class="card__body">
-    <%= link_to prototype.title, root_path, class: :card__title %>
+    <%= link_to prototype.title, prototype_path(prototype.id), method: :get,  class: :card__title %>
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
