--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -3,8 +3,7 @@
   <% if user_signed_in? %>
     <%# ログインしているときは以下を表示する %>
       <div class="greeting">
-        <%= "こんにちは、#{current_user.name}さん" %>
-        <%#= link_to "ユーザー名さん", root_path, class: :greeting__link%>
+        <%= link_to "こんにちは、#{current_user.name}さん", user_path(current_user.id), class: :greeting__link%>
       </div> 
     <%# // ログインしているときは上記を表示する %>
     
