--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -1,18 +1,15 @@
 <main class="main">
   <div class="inner">
+      
   <% if user_signed_in? %>
-    <%# ログインしているときは以下を表示する %>
       <div class="greeting">
         <%= link_to "こんにちは、#{current_user.name}さん", user_path(current_user.id), class: :greeting__link%>
       </div> 
-    <%# // ログインしているときは上記を表示する %>
-    
-      <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
-    
+
     <% end %>
       
     <div class="card__wrapper">
-    <%= render partial: 'prototype', collection: @prototypes %>
+      <%= render partial: 'prototypes/prototype', collection: @prototypes %>
     </div>
   </div>
 </main>
